# CursoTesting

./: .gitignore  README.md
clean_code_python/: arquitectura-hexagonal.html  clases.html  comentarios-formato.html  funciones.html  index.html  manejo-errores.html  nombres.html  python-idiomatico.html  styles.css  testing.html
eoi-docker-desde-cero/: index.html  indice-curso.html  nivel_1_arquitectura.html  nivel_2_dockerfiles.html  nivel_3_volumenes_redes.html  nivel_4_compose_basico.html  nivel_5_compose_avanzado.html
jenkins-lab/: README.md  VALIDATION_REPORT.md  docker-compose.yml  install-plugins.sh
jenkins-lab/repo-template/: Jenkinsfile  pyproject.toml
jenkins-lab/repo-template/scripts/: wait_for_db.py
jenkins-lab/repo-template/src/gradebook/: __init__.py  domain.py  mariadb_repository.py  repository.py  service.py
jenkins-lab/repo-template/tests/integration/: test_mariadb_repository.py
jenkins-lab/repo-template/tests/unit/: test_gradebook_service.py
selenium-firefox/: course.js  esperas.html  index.html  interacciones.html  snippets-data.js  styles.css  validation_report.txt  webdriver.html
teoria_testing_python/: app.js  calidad.html  demos.html  ejemplos.html  herramientas.html  index.html  python_testing_tool.html  styles.css
testing_python/: apendice_referencia.html  index.html  m1_cap1_fundamentos.html  m1_cap2_codigo_que_duele.html  m2_cap3_tdd.html  m3_cap4_arquitectura_sw.html  m4_cap5_pytest.html  m4_cap6_coverage_calidad.html  m4_cap7_hypothesis.html  m5_cap8_unit_tests.html  m6_cap9_mocks.html  m7_cap10_git_hooks.html  styles.css  (+1 more)
(+35 files in other folders)
