[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gradebook-lab"
version = "0.1.0"
description = "Laboratorio de CI con Jenkins, Gitea, pytest y MariaDB"
requires-python = ">=3.12"
dependencies = [
  "PyMySQL>=1.1,<2.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.3,<9.0",
]

[tool.pytest.ini_options]
addopts = "-ra -vv --import-mode=importlib"
pythonpath = ["src"]
testpaths = ["tests"]